# ultraplan-sync

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CREDITS.md  Doxyfile  README.md  System_Design_UML_analysis.md  UML.md  awsome_cpp.md  系統架構與UML分析：尋傘記.md  遊戲企劃與敘事架構.md
.github/workflows/: pages.yml
docs/: CONVENTIONS.md  FILE_ORGANIZATION.md  README.md  ROADMAP.md  Report.md  SCRIPT_HANDOFF.md  SOLID_REVIEW.md  STRICT_REVIEW.md  STRICT_REVIEW_R3.md  UML.md  architecture-roles.md  docs-graph.md  text-map.md  講稿.md
docs/UML/: 0-layer-map.md  1-entities.md  2-state-machine.md  3-mvc-isystem.md  4-gfx.md  5-harness.md  6-sequence.md  7-gof.md  8-solid.md  README.md
docs/content/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  ending_a.md  ending_b.md  ending_c.md  interlude_market.md  voice_bible.md
docs/cycle8-audit/: FILE_ORGANIZATION.md  README.md  ROADMAP.md  SCRIPT_HANDOFF.md  SOLID_REVIEW.md  STRICT_REVIEW.md  STRICT_REVIEW_R3.md  cycle9-ux-diagnosis.md  docs-graph.md
docs/cycle9-audit/: cycle9f-post-iteration-diagnosis.md
docs/iteration-history/: ACCEPTANCE.md  CHANGELOG.md
docs/kb/: INDEX.md  README.md
docs/plans/: 2026-05-15-dialog-pipeline.md
graph/: README.md  build_graph.py  bundle.py  index.html  index.src.html
graph/assets/: app.js  style.css
graph/data/: files.json  graph-data.js  graph.json
graph/wiki/: files-index.md  index.md  overview.md  schema.md
include/: BuildingTracker.h  Buildings.h  CashPickup.h  Chapter1AddDrop.h  Chapter2Midterms.h  Chapter2Quest.h  Chapter3Quest.h  Chapter3SportsDay.h  Chapter4Finals.h  Chapter4Quest.h  ChapterGate.h  ChapterPickups.h  ChapterQuestItems.h  ChapterSpawns.h  ChapterToast.h  ChapterVendors.h  Character.h  CharacterSelect.h  CollisionMask.h  ConsumableItem.h  CursedUmbrella.h  DialogData.h  DialogLoader.h  DialogOpener.h  DialogSource.h  DialogState.h  DialogView.h  EndingGate.h  EndingView.h  EnergyDrink.h  EventBus.h  EventWiring.h  FragileUmbrella.h  GameController.h  GameHelp.h  GameObject.h  GameObjectFactory.h  GameObjectQueries.h  HotPack.h  HudSlot.h  (+30 more)
include/app/: IScene.h  SceneBootstrap.h  SceneManager.h
include/controller/: EventWiring.h  GameController.h  GameObjectFactory.h  GameObjectQueries.h  InputHandler.h  InteractDispatch.h  SceneRouter.h  SimSystem.h
include/dialog/: DialogLayout.h  DialogOpener.h  DialogSource.h  DialogState.h  DialogView.h
include/entities/: CashPickup.h  Character.h  ConsumableItem.h  CursedUmbrella.h  DlcSign.h  EnergyDrink.h  FragileUmbrella.h  GameObject.h  HotPack.h  Item.h  NPC.h  Player.h  ProfessorTrapUmbrella.h  QuestFlagPickup.h  Roles.h  TransparentUmbrella.h  TrueUmbrella.h  WaterproofSpray.h
include/gfx/: Bounds.h  Camera2D.h  CameraScope.h  Color.h  Decorations.h  DrawScope.h  Font.h  IRenderer.h  Input.h  Key.h  MaskLoader.h  RaylibRenderer.h  Rect.h  Renderer.h  SpriteStrip.h  TextBuilder.h  Texture.h  TexturePreload.h  Time.h  UmbrellaGlyph.h  Vec2.h  WalkCycle.h  Window.h
include/harness/: Harness.h  README.md  ScriptInput.h
include/quest/: Chapter1Quest.h  Chapter2Quest.h  Chapter3Quest.h  Chapter4Quest.h  ChapterPickups.h  ChapterQuestItems.h  ChapterSpawns.h  ChapterVendors.h  ItemCatalog.h  NpcSpawns.h  PipoyaRoster.h  QuestHookTable.h  QuestIndicator.h  QuestObjective.h
include/state/: Chapter1AddDrop.h  Chapter2Midterms.h  Chapter3SportsDay.h  Chapter4Finals.h  EndingGate.h  InterludeExit.h  InterludeExitMarker.h  InterludeMarket.h  SemesterState.h  SemesterStateMachine.h
include/ui/: ChapterCard.h  ChapterToast.h  CharacterSelect.h  EndingView.h  GameHelp.h  HelpPageView.h  InventoryView.h  LoadingScreen.h  MessageView.h  PressLatch.h  QuestGiverIndicator.h  README.md  RainHud.h  ReducedMotion.h  TitleScreen.h  View.h
include/world/: BuildingTracker.h  Buildings.h  CollisionMask.h  Physics.h  World.h  WorldOptions.h
resources/: README.md
src/: BuildingTracker.cpp  CashPickup.cpp  Chapter2Quest.cpp  Chapter3Quest.cpp  Chapter4Quest.cpp  ChapterGate.cpp  ChapterVendors.cpp  CharacterSelect.cpp  CursedUmbrella.cpp  DialogLayout.cpp  DialogLoader.cpp  DialogOpener.cpp  DialogSource.cpp  DialogState.cpp  DialogView.cpp  EndingGate.cpp  EndingView.cpp  EnergyDrink.cpp  EventBus.cpp  FragileUmbrella.cpp  GameController.cpp  GameObjectFactory.cpp  Harness.cpp  HotPack.cpp  InputHandler.cpp  InventoryView.cpp  MessageView.cpp  NPC.cpp  Player.cpp  ProfessorTrapUmbrella.cpp  QuestFlagPickup.cpp  README.md  SceneRouter.cpp  ScriptInput.cpp  SemesterStateMachine.cpp  TerrainMask.cpp  TitleScreen.cpp  TransparentUmbrella.cpp  TrueUmbrella.cpp  Vendor.cpp  (+5 more)
src/app/: SceneBootstrap.cpp  SceneManager.cpp  main.cpp
src/controller/: DialogChoiceApply.cpp  EventBus.cpp  GameController.cpp  GameObjectFactory.cpp  InputHandler.cpp  InteractDispatch.cpp  SceneRouter.cpp  SimSystems.cpp  VendorMenu.cpp
src/dialog/: DialogLayout.cpp  DialogLoader.cpp  DialogOpener.cpp  DialogView.cpp  (+2 more)
tests/: README.md  test_building_tracker.cpp  test_camera2d_clamp.cpp  test_cashpickup.cpp  test_ch1_spine_reachable.cpp  test_ch2_quest.cpp  test_ch2_reactive_substates.cpp  test_ch2_ripple.cpp  test_ch3_quest.cpp  test_ch3_ripple.cpp  test_ch4_finale.cpp  test_ch4_ripple.cpp  test_ch4_routing.cpp  test_chapter2_roster.cpp  test_chapter3_roster.cpp  test_chapter4_roster.cpp  test_chapter4_senior_skip.cpp  test_chapter_gate.cpp  test_chapter_questitems.cpp  test_chapter_spawns.cpp  test_chapter_spine.cpp  test_chapter_transitions.cpp  test_collision_mask.cpp  test_consumable.cpp  test_cursed_penalty_scale.cpp  test_dialog_box_render.cpp  test_dialog_content_dir.cpp  test_dialog_data.cpp  test_dialog_data_golden.cpp  test_dialog_layout.cpp  test_dialog_loader.cpp  test_dialog_opener.cpp  test_dialog_skip.cpp  test_dialog_source.cpp  test_dialog_state.cpp  test_economy_loop.cpp  test_ending_card_render.cpp  test_ending_gate.cpp  test_eventbus.cpp  test_eventbus_isolation.cpp  (+47 more)
tools/: README.md  composite_worldmap.py  docs_graph.py  gen_dialog.py  gif_to_strip.py  strip_plots.py  text_map.py  tiled_to_world.py  trim_3d.py  trim_tiles.py  world.tmj
(+767 files in other folders)
